force-app/main/default/objects/Discrepancy_Line_Item__c/Discrepancy_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Discrepancy Line Item</label>
    <nameField>
        <displayFormat>DLI-{00000}</displayFormat>
        <label>Discrepancy Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discrepancy Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>