force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <formula>(Unit_Price__c  *  Approved_Quantity__c)  +  Total_Approved_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>