force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Approved_IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_IGST_Amount__c</fullName>
    <formula>( Unit_Price__c  *  Approved_Quantity__c )   *   (1 + IGST__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved IGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>