force-app/main/default/objects/Discrepancy_Line_Item__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <formula>Discrepancy__r.Shipment_Item__r.CGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>