force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Claimed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Amount__c</fullName>
    <formula>(Quantity__c  *  Unit_Price__c) +  Total_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>