force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Dealer_Recheck__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Recheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Recheck</label>
    <type>Checkbox</type>
</CustomField>