force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy__c</fullName>
    <label>Discrepancy</label>
    <referenceTo>Discrepancy__c</referenceTo>
    <relationshipLabel>Discrepancy Line Items</relationshipLabel>
    <relationshipName>Discrepancy_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>