force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Discrepancy_Lot__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discrepancy Lot</label>
    <referenceTo>Discrepancy_Lot__c</referenceTo>
    <relationshipLabel>Discrepancy Line Items</relationshipLabel>
    <relationshipName>Discrepancy_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>