force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Feedback_From_Spare__c.field-meta.xml
<CustomField>
    <fullName>Feedback_From_Spare__c</fullName>
    <label>Feedback From Spare</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>