force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Feedback_From_Warehosue__c.field-meta.xml
<CustomField>
    <fullName>Feedback_From_Warehosue__c</fullName>
    <label>Feedback From Warehosue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>