force-app/main/default/objects/Discrepancy_Line_Item__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <formula>Discrepancy__r.Shipment_Item__r.IGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>