force-app/main/default/objects/Discrepancy_Line_Item__c/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <formula>(Unit_Price__c * Quantity__c) * (1 + IGST__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>