force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Is_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Is_Dispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dispatch</label>
    <type>Checkbox</type>
</CustomField>