force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Is_VOR__c.field-meta.xml
<CustomField>
    <fullName>Is_VOR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VOR</label>
    <type>Checkbox</type>
</CustomField>