force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Is_Warehouse_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_Warehouse_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Warehouse Received</label>
    <type>Checkbox</type>
</CustomField>