force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Discrepancy Line Items</relationshipLabel>
    <relationshipName>Discrepancy_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>