force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Discrepancy__r.Shipment_Item__r.Product2.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>