force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Re_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Submit_Date__c</fullName>
    <label>Re Submit Date</label>
    <type>Date</type>
</CustomField>