force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Recived_Request_Part_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Recived_Request_Part_Quantity__c</fullName>
    <label>Recived Request Part Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>