force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>SPM Rejection Reason</label>
    <type>TextArea</type>
</CustomField>