force-app/main/default/objects/Discrepancy_Line_Item__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <formula>Discrepancy__r.Shipment_Item__r.SGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>