force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <formula>Discrepancy__r.Shipment_Item__r.Parent_Shipment__r.ShipToName</formula>
    <label>Shipment</label>
    <type>Text</type>
</CustomField>