force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Spare_Approval__c.field-meta.xml
<CustomField>
    <fullName>Spare_Approval__c</fullName>
    <label>Spare Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Re-Submit</fullName>
            </value>
            <value>
                <fullName>Initiate Part Request</fullName>
                <isActive>false</isActive>
                <label>Initiate Part Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>