force-app/main/default/objects/Discrepancy_Line_Item__c/fields/SPM_Apporoved_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SPM_Apporoved_Quantity__c</fullName>
    <label>SPM Apporoved Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>