force-app/main/default/objects/Discrepancy_Line_Item__c/fields/SPM_Reject_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SPM_Reject_Quantity__c</fullName>
    <formula>Quantity__c  -  SPM_Apporoved_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPM Reject Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>