force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under SPM Review</fullName>
            </value>
            <value>
                <fullName>Under Warehouse Review</fullName>
            </value>
            <value>
                <fullName>Under Finance Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>