force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Supporting_Media__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Media__c</fullName>
    <label>Supporting Media</label>
    <type>Url</type>
</CustomField>