force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Total_Approved_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Tax_Amount__c</fullName>
    <formula>Approved_IGST_Amount__c  +  Approved_VOR_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Approved Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>