force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Total_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount__c</fullName>
    <formula>IGST_Amount__c  +  VOR_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>