force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIT</fullName>
            </value>
            <value>
                <fullName>DIT</fullName>
            </value>
            <value>
                <fullName>WP</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>