force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>Discrepancy__r.Shipment_Item__r.Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>