force-app/main/default/objects/Discrepancy_Line_Item__c/fields/VOR_5__c.field-meta.xml
<CustomField>
    <fullName>VOR_5__c</fullName>
    <formula>IF( Is_VOR__c ,  (Unit_Price__c  *  Quantity__c) * 0.05 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOR(5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>