force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Warehouse_Approval__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Approval__c</fullName>
    <label>Warehouse Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Initiate Part Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>