force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Warehouse_Reject_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Reject_Quantity__c</fullName>
    <formula>Quantity__c  -   Ware_House_Approved_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Reject Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>