force-app/main/default/objects/Discrepancy_Line_Item__c/fields/Warehousr_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Warehousr_Rejection_Reason__c</fullName>
    <label>Warehouse Rejection Reason</label>
    <type>TextArea</type>
</CustomField>