force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/If_Quantity_is_rejected_Rjec_MND.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Quantity_is_rejected_Rjec_MND</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    SPM_Apporoved_Quantity__c &lt; Quantity__c,
    ISBLANK(Rejection_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>&apos;Rejction Reason&apos; should not be blank  if SPM Approved quantity is less then total quantity..</errorMessage>
</ValidationRule>