force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/If_ReSubmit_SPM_Approved_quantity_Mandt.validationRule-meta.xml
<ValidationRule>
    <fullName>If_ReSubmit_SPM_Approved_quantity_Mandt</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Spare_Approval__c, &quot;Re-Submit&quot;),
OR(
ISBLANK( SPM_Apporoved_Quantity__c)

)
)</errorConditionFormula>
    <errorDisplayField>SPM_Apporoved_Quantity__c</errorDisplayField>
    <errorMessage>On &apos; Re - Submit &apos;  fill SPM Approved Quantity.</errorMessage>
</ValidationRule>