force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/If_spare_approval_reject_mand_spare_fdb.validationRule-meta.xml
<ValidationRule>
    <fullName>If_spare_approval_reject_mand_spare_fdb</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Spare_Approval__c, &quot;Rejected&quot;),
    OR(
        ISBLANK(Feedback_From_Spare__c)
       
    )
)</errorConditionFormula>
    <errorDisplayField>Feedback_From_Spare__c</errorDisplayField>
    <errorMessage>&apos;Feedback  From Reason &amp; &apos; is required when Spare Approval is Rejected.</errorMessage>
</ValidationRule>