force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/If_Status_is_Re_Submit_Date_Is_mandat.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Re_Submit_Date_Is_mandat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Spare_Approval__c, &quot;Re-Submit&quot;),
    OR(
        ISBLANK(Re_Submit_Date__c)
       
    )
)</errorConditionFormula>
    <errorDisplayField>Re_Submit_Date__c</errorDisplayField>
    <errorMessage>&quot;Re Submit Date&quot; is is required when Spare Approval is Re-Submit.</errorMessage>
</ValidationRule>