force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/If_warehouse_is_Reject_MNDwar_Feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>If_warehouse_is_Reject_MNDwar_Feedback</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Warehouse_Approval__c, &quot;Rejected&quot;),
    ISBLANK(Feedback_From_Warehosue__c)
)</errorConditionFormula>
    <errorDisplayField>Feedback_From_Warehosue__c</errorDisplayField>
    <errorMessage>&apos;Feedback From Warehosue&apos; is required when Spare Approval is Rejected.</errorMessage>
</ValidationRule>