force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/If_WHA_Quantity_is_rejected_Rjec_MND.validationRule-meta.xml
<ValidationRule>
    <fullName>If_WHA_Quantity_is_rejected_Rjec_MND</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Ware_House_Approved_Quantity__c	&lt; Quantity__c,
    ISBLANK(Rejection_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Warehousr_Rejection_Reason__c</errorDisplayField>
    <errorMessage>&apos;Warehouse Rejction Reason&apos; should not be blank if you not approved total quantity.</errorMessage>
</ValidationRule>