force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/WAH_Approved_QTY_Not_gtr_SPMRejcted_QTY.validationRule-meta.xml
<ValidationRule>
    <fullName>WAH_Approved_QTY_Not_gtr_SPMRejcted_QTY</fullName>
    <active>true</active>
    <errorConditionFormula>Ware_House_Approved_Quantity__c &gt;  SPM_Apporoved_Quantity__c</errorConditionFormula>
    <errorMessage>Warehouse Approved Quantity cannot be greater than SPM Approved Quantity.</errorMessage>
</ValidationRule>