force-app/main/default/objects/Discrepancy_Line_Item__c/validationRules/WHA_is_Approved_WHA_approved_QNTY_MNDT.validationRule-meta.xml
<ValidationRule>
    <fullName>WHA_is_Approved_WHA_approved_QNTY_MNDT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Warehouse_Approval__c , &quot;Approved&quot;),
OR(
ISBLANK( Ware_House_Approved_Quantity__c )

)
)</errorConditionFormula>
    <errorDisplayField>Ware_House_Approved_Quantity__c</errorDisplayField>
    <errorMessage>&apos;Warehouse Approval Quantity &apos; is required when Warehouse Approval is Approved.</errorMessage>
</ValidationRule>