force-app/main/default/objects/Discrepancy_Line_Item__c/listViews/DIT.listView-meta.xml
<ListView>
    <fullName>DIT</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Approved_Quantity__c</columns>
    <columns>Discrepancy__c</columns>
    <columns>Shipment__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Supporting_Media__c</columns>
    <columns>Spare_Approval__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>DIT</value>
    </filters>
    <label>DIT</label>
    <sharedTo>
        <portalRole>AUserPartnerPersonAccount</portalRole>
    </sharedTo>
</ListView>