force-app/main/default/objects/Discrepancy_Line_Item__c/listViews/Extra_Quantity.listView-meta.xml
<ListView>
    <fullName>Extra_Quantity</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quantity__c</columns>
    <columns>Approved_Quantity__c</columns>
    <columns>Discrepancy__c</columns>
    <columns>Shipment__c</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Supporting_Media__c</columns>
    <columns>Feedback_From_Spare__c</columns>
    <columns>Feedback_From_Warehosue__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Extra</value>
    </filters>
    <label>Extra Quantity</label>
</ListView>