force-app/main/default/objects/Discrepancy_Line_Item__c/listViews/SPM_Extra_Quantity_Approval.listView-meta.xml
<ListView>
    <fullName>SPM_Extra_Quantity_Approval</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quantity__c</columns>
    <columns>Approved_Quantity__c</columns>
    <columns>Discrepancy__c</columns>
    <columns>Shipment__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Supporting_Media__c</columns>
    <columns>Spare_Approval__c</columns>
    <columns>Feedback_From_Spare__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Extra</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under SPM Review</value>
    </filters>
    <label>SPM Extra Quantity Approval</label>
    <sharedTo>
        <group>SPM_User</group>
    </sharedTo>
</ListView>