force-app/main/default/objects/Discrepancy_Line_Item__c/listViews/Warehouse_Extra_Quantity_Approval.listView-meta.xml
<ListView>
    <fullName>Warehouse_Extra_Quantity_Approval</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quantity__c</columns>
    <columns>Approved_Quantity__c</columns>
    <columns>Discrepancy__c</columns>
    <columns>Shipment__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Supporting_Media__c</columns>
    <columns>Warehouse_Approval__c</columns>
    <columns>Feedback_From_Warehosue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Extra</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under SPM Review</value>
    </filters>
    <label>Warehouse Extra Quantity Approval</label>
    <sharedTo>
        <group>Warehouse_Group</group>
    </sharedTo>
</ListView>