force-app/main/default/objects/Discrepancy_Line_Item__c/listViews/Warehouse_WP_Approval.listView-meta.xml
<ListView>
    <fullName>Warehouse_WP_Approval</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quantity__c</columns>
    <columns>SPM_Apporoved_Quantity__c</columns>
    <columns>Ware_House_Approved_Quantity__c</columns>
    <columns>Warehousr_Rejection_Reason__c</columns>
    <columns>Discrepancy__c</columns>
    <columns>Shipment__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Supporting_Media__c</columns>
    <columns>Warehouse_Approval__c</columns>
    <columns>Feedback_From_Warehosue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>WP</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Warehouse Review</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Warehouse WP Approval</label>
    <sharedTo>
        <group>Warehouse_Group</group>
    </sharedTo>
</ListView>